[package]
name = "nwws-receiver"
version = "0.1.0"
authors = ["Matt Cegielka <matt@mudbrick.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
chrono = "0.4.19"
rusqlite = "0.27"
nwws-oi = "0.2.0"
uuid = { version = "0.8", features = ["v4"] }

[patch.crates-io]
nwws-oi = { path = "./patched-crates/nwws-oi" }
tokio-xmpp = { path = "./patched-crates/xmpp-rs/tokio-xmpp" }

[features]
