[workspace]
members = ['crates/*']
resolver = "2"

[workspace.dependencies]
log = "0.4.14"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
chrono = "0.4.19"
rusqlite = "0.27"
nom = "8.0.0"
nwws-oi = "0.2"
uuid = { version = "0.8", features = ["v4"] }
