[workspace]
members = ['crates/*']
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6"
log = "0.4.14"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.0"
dotenv = "0.15.0"
chrono = "0.4.19"
rusqlite = { version = "0.37", features = ["bundled"] }
nom = "8.0.0"
nwws-oi = "0.3"
uuid = { version = "0.8", features = ["v4"] }
nws-product-list = "0.1.0"
oasiscap = "0.2.0"
owo-colors = "4.2.2"
axum = { version = "0.8.4", features = ["http2"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tokio-stream = { version = "0.1.17",  features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"
serde = { version = "1.0", features = ["derive"] }
