[package]
name = "nwws-receiver"
version = "0.1.0"
authors = ["Matt Cegielka <matt@mudbrick.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
log.workspace = true
futures.workspace = true
tokio = { workspace = true }
env_logger.workspace = true
dotenv.workspace = true
chrono.workspace = true
rusqlite.workspace = true
nwws-oi.workspace = true
uuid = { workspace = true }
nws-product-list.workspace = true
oasiscap.workspace = true
owo-colors.workspace = true
axum.workspace = true
axum-extra.workspace = true
futures-util.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
headers.workspace = true
serde.workspace = true
serde_json.workspace = true

# [patch.crates-io]
# nwws-oi = { path = "./patched-crates/nwws-oi" }

[features]
